--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
