--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "openai": "^4.92.0",
+    "razorpay": "^2.9.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
